# proj

./: CMakeLists.txt  app.overlay  olimex_stm32_h405.overlay  olimex_stm32_p405.overlay  prj.conf  qemu_cortex_m3..overlay  qemu_cortex_m3.conf  qemu_cortex_m3.overlay  west.yml
.github/workflows/: main.yml
boards/: nucleo_f446re.conf  olimex_stm32_h405.conf  olimex_stm32_p405.conf  qemu_cortex_m3.conf
include/: Device_State_Machine+Watchdog.h  Fault_Tolerant_I2C_Communication_Layer.h  Persistent_Configuration_System.h  Power_Management_System.h  RTOS_Command_based_thread_system.h  RTOS_Synchronization_Layer.h  Smart_Battery_System.h  Static_Memory+MISRA_Compliance_Layer.h  USB_CDC_Virtual_COM_Shell_Interface.h
scripts/: check_coverage.sh
src/: Device_State_Machine+Watchdog.cpp  Device_State_Machine_QEMU_Stub.cpp  Fault_Tolerant_I2C_Communication_Layer.cpp  Fault_Tolerant_I2C_Communication_Layer_QEMU_Stub.cpp  Persistent_Configuration_System.cpp  Persistent_Configuration_System_QEMU_Stub.cpp  Power_Management_System.cpp  Power_Management_System_QEMU_Stub.cpp  QEMU_Startup_Probe.c  RTOS_Command_based_thread_system.cpp  RTOS_Synchronization_Layer.cpp  Smart_Battery_System.cpp  Smart_Battery_System_QEMU_Stub.cpp  Static_Memory+MISRA_Compliance_Layer.cpp  Static_Memory_QEMU_Stub.cpp  USB_CDC_Virtual_COM_Shell_Interface.cpp  USB_CDC_Virtual_COM_Shell_Interface_QEMU_Stub.cpp  main.cpp
tests/: CMakeLists.txt  test_I2C_Fault_Recovery.cpp  test_battery_fsm.cpp  test_config_store.cpp  test_power_management.cpp  test_rtos_commands.cpp  test_state_machine.cpp  test_static_memory.cpp  test_synchronization.cpp  test_usb_shell.cpp
